# GrIML

./: .gitignore  .readthedocs.yaml  CITATION.cff  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: unit_test.yml  unit_test_coverage.yml
docs/: README-ESA-GRIML-IML-fv1.md  README-ESA-GRIML-IML-fv2.md  acknowledgements.md  background.md  conf.py  contributing.md  index.rst  installation.md  requirements.txt  tutorial-data.md  tutorials-data.md  tutorials-processing.md  tutorials.md
docs/background/: README-ESA-GRIML-IML-fv1.md  README-ESA-GRIML-IML-fv3.md  index.rst
docs/tutorials/: dataset_tutorial.ipynb  process_with_test_data.ipynb
gee_scripts/: README.md  lake_classification.js  lake_classification.py  lake_temperature_estimation.js  lake_temperature_estimation.py
other/datasets/: README.md
other/datasets/aoi/: AOI_mask.shp  AOI_mask.shx  AOI_mask_split.dbf  AOI_mask_split.shp  AOI_mask_split.shx  test_grid.dbf  test_grid.shp  test_grid.shx  test_grid_50.dbf  test_grid_50.shp  test_grid_50.shx
other/datasets/drainage_basins/: greenland_basins_polarstereo.dbf  greenland_basins_polarstereo.qix  greenland_basins_polarstereo.shp  greenland_basins_polarstereo.shx  greenland_basins_polarstereo_lines.dbf  (+2 more)
paper/: paper.bib  paper.md
src/griml/: __init__.py
test/: process_with_test_data.ipynb  process_with_test_data.py
test/test_data/: test_icemask.gpkg  test_placenames.gpkg  test_placenames.qmd  test_placenames.shp  test_placenames.shx
tutorials/: dataset_tutorial.ipynb  process_with_test_data.ipynb  using_custom_input_data.ipynb
(+28 files in other folders)
